--- a/src/components/SongCard/SongCard.css
+++ b/src/components/SongCard/SongCard.css
@@ -1,8 +1,17 @@
 .Song-card {
+    display: flex;
+    flex-direction: column;
     background-color: white;
-    height: 150px;
+    align-items: center;
+    height: 200px;
     width: 300px;
-    padding: 10px;
     margin: 10px;
     border-radius: 10px;
+}
+
+.song-card-button {
+    font-size: 15px;
+    height: auto;
+    border-radius: 10px;
+    /* padding: 10px; */
 }
